# binder

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: wheels.yml
binder/: __init__.py
cmake/Modules/: HunterGate.cmake
documentation/: config.rst
python/: pyproject.toml
python/tests/: test_binder.py
source/: CMakeLists.txt  class.cpp  config.cpp  config.hpp  context.cpp  function.cpp  options.cpp  options.hpp  stl_binders.hpp  type.cpp
test/: CMakeLists.txt  T00.basic.ref.cpp  T01.enum.ref.cpp  T02.function.ref.cpp  T05.default.ref.cpp  T07.class.match_args.ref.cpp  T07.class.ref.cpp  T08.constructor.ref.cpp  T09.overload.ref.cpp  T10.inheritance.ref.cpp  T10.virtual_inheritance.ref.cpp  T11.override.ref.cpp  T12.insertion_operator.ref.cpp  T12.operator.ref.cpp  T15.copy.ref.cpp  T15.inner_class.fwd.ref.cpp  T15.inner_class.ref.cpp  T17.anonymous.ref.cpp  T20.template.ref.cpp  T20.template.variadic.ref.cpp  T30.include.ref.cpp  T31.include_for_class.ref.cpp  T32.call_guard.ref.cpp  T33.buffer_protocol.ref.cpp  T40.stl.ref.cpp  T42.stl.names.map.ref.cpp  T42.stl.names.multi.ref.cpp  T42.stl.names.multimap.ref.cpp  T42.stl.names.multiset.ref.cpp  T42.stl.names.ref.cpp  T42.stl.names.set.ref.cpp  T43.stl.pybind11_include_stl.cli  T43.stl.pybind11_include_stl.ref.cpp  T50.add_on_binder.ref.cpp  T50.namespace_binder.ref.cpp  T60.custom_shared.ref.cpp  T60.pybind11.ref.cpp  T61.smart_holder.ref  T70.module_local.ref.cpp  T70.options.ref.cpp  (+6 more)
