[build-system]
requires = ["scikit-build-core", "setuptools", "setuptools-scm", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "cppbinder"
description = "Binder, tool for automatic generation of Python bindings"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "Rosetta Commons"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/RosettaCommons/binder/"
Documentation = "https://cppbinder.readthedocs.io/"
"Bug Tracker" = "https://github.com/RosettaCommons/binder/issues/"

[project.scripts]
binder = "binder:binder"

[tool.scikit-build]
minimum-version = "0.8"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.sdist]
include = ["binder/_version.py"]

[tool.scikit-build.cmake]
args = [
    "-DLLVM_ENABLE_EH=ON",
    "-DLLVM_ENABLE_RTTI=ON",
    "-DLLVM_ENABLE_PROJECTS=clang",
]
targets = ["binder"]

[tool.scikit-build.wheel]
packages = ["binder"]
py-api = "py3"
expand-macos-universal-tags = true

[tool.setuptools_scm]
root = "."
version_scheme = "post-release"
write_to = "binder/_version.py"
fallback_version = "0.0.1"
